# engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/models/cube/: basic_cube_03.gltf
assets/models/torus/: basic_torus_00.gltf
cmake/: nuketargets.cmake
core/: CMakeLists.txt
core/private/: Callback.cpp  Camera.cpp  Engine.cpp  EntryPoint.cpp  File.cpp  Game.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
core/public/: Callback.h  Camera.h  Containers.h  Engine.h  File.h  Game.h  Keyboard.h  Mouse.h  Window.h
docs/: Introduction.md  introduction.md
docs/internals/: Error.md  File.md  Project.md  Scope.md  Texture.md
entry/: CMakeLists.txt
entry/private/: EntryPoint.cpp
event/: CMakeLists.txt
event/private/: Event.cpp  KeyEvent.cpp
event/public/: Event.h  KeyEvent.h
graphics/: CMakeLists.txt
graphics/private/: Buffer.cpp  Shader.cpp
graphics/public/: Buffer.h  Shader.h
interface/: CMakeLists.txt
interface/private/: Interface.cpp
interface/public/: Interface.h
model/: CMakeLists.txt
model/private/: Collection.cpp  Ditto.cpp  Mesh.cpp  Model.cpp  Object.cpp  Spaces.cpp  Texture.cpp
model/public/: Collection.h  Ditto.h  Mesh.h  Model.h  Models.h  Object.h  Spaces.h  Texture.h
shaders/: color.fs  color.vs  instancing_normal_light.fs  instancing_normal_light.vs  instancing_spotlight.fs  model_basic_loading.fs  model_basic_loading.vs  model_light.fs  model_light.vs  model_loading.fs  model_reflector.fs  model_reflector.vs  test.fs  test.vs
state/: CMakeLists.txt
state/private/: Ground.cpp  State.cpp  World.cpp
state/public/: Ground.h  State.h  World.h
tests/: CMakeLists.txt
tests/private/: file_tests.cpp  test_tests.cpp
time/: CMakeLists.txt
time/private/: Phase.cpp
time/public/: Phase.h
